# viDAO

./: .dockerignore  .gitignore  .mcp.json  package-lock.json  package.json  pyproject.toml  stitch-mcp-server.mjs  viDAO.md  viDAO_MVP.md
.github/workflows/: ci.yml
apps/web/: next.config.ts  package-lock.json  package.json
contracts/: .gitignore  hardhat.config.ts  package-lock.json  package.json
contracts/contracts/stylus/payout-pool/: Cargo.toml
contracts/contracts/stylus/payout-pool/src/: lib.rs  main.rs
contracts/scripts/: compile-and-cache.ts  deploy-and-publish.ts
contracts/test/: PayoutPool.test.ts
deploy/: .env.example  Dockerfile.deployer  Dockerfile.web  Tiltfile
deploy/helm/: Chart.yaml  values-ci.yaml  values-dev.yaml  values-homelab.yaml  values-test.yaml  values.yaml
deploy/helm-chainpool/: Chart.yaml  values.yaml
deploy/scripts/: entrypoint-deployer.sh  entrypoint-web.sh  reset-dev.sh  run-ci-tests.sh  run-tests.sh  stack-smoke.sh
docs/: docs.json  how-it-works.mdx  index.mdx  introduction.mdx  quickstart.mdx
docs/api/: authentication.mdx  overview.mdx  payout-pool-contract.mdx  subscription-webhook.mdx  video-upload.mdx  watch-heartbeat.mdx
docs/api-reference/: openapi.yaml  overview.mdx
docs/architecture/: data-model.mdx  overview.mdx  tech-stack.mdx
docs/concepts/: attestation.mdx  economic-model.mdx  heartbeat-protocol.mdx  payout-math.mdx
docs/creators/: dashboard.mdx  getting-paid.mdx  uploading.mdx
docs/faq/: creators.mdx  viewers.mdx
docs/payouts/: how-payouts-work.mdx  pool.mdx  (+1 more)
services/chainpool/: Dockerfile  pyproject.toml
services/chainpool/app/: api.py  deployer.py  k8s.py  main.py  models.py  reconciler.py  settings.py  store.py
tests/: conftest.py
(+108 files in other folders)
