[project]
name = "vidao-chainpool"
version = "0.1.0"
description = "Ephemeral Arbitrum Nitro devnode lease service for viDAO integration tests"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "kubernetes>=31.0",
  "httpx>=0.27",
  "web3>=7.6",
  "eth-account>=0.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
]
