[package]
name = "payout-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.5.7"
alloy-sol-types = "1.5.7"
stylus-sdk = "0.10.4"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
